--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
         </div>
         <div class="content">
         <h3>Sankeerth</h3>
-        <p> The UP Solve team displayed exceptional expertise, professionalism, and promptness in delivering top-notch solutions tailored to my specific needs. 
-          Their commitment to excellence and customer satisfaction is truly commendable. </p>
+        <p> A BIG Thank you to the entire Upsolve team! Your Team acted as pillars of Bolt abacus and infact over-delivered your promise. 
+            It was a pleasure working with the Upsolve team. Everyone who interacted with the platform loved the website design and flow! 
+            Bolt Abacus will always consider Upsolve a crucial partner in its growth and will always stick by it’s side 💛 </p>
+        <br>
+            https://boltabacus.com/
         </div>
     </div>
 
