--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             It was a pleasure working with the Upsolve team. Everyone who interacted with the platform loved the website design and flow! 
             Bolt Abacus will always consider Upsolve a crucial partner in its growth and will always stick by it’s side 💛 </p>
         <br>
-            https://boltabacus.com/
+            <a href="https://boltabacus.com/"> BoltAbacus.com </a>
         </div>
     </div>
 
